# storm

./: Cargo.toml  rust-toolchain.toml
.github/: config.yml
.github/workflows/: cd.yml  ci.yml
scripts/: build-android  dep  dot  fix  generate-config  push-android  release  run  ssh-android  tag  termux-run  test
scripts/aux/: core.bash  generate-config.js  test.bash
scripts/mock/: curl  exiftool.conf  rclone
src/: alumni.rs  compress.rs  crypto.rs  env_var.rs  exif.rs  format.rs  fs.rs  lib.rs  log.rs  normalize.rs  provider.rs  rclone.rs  shell.rs  smalldate.rs  tasker.rs  upload.rs  url.rs  zip.rs
src/archive/: mod.rs  work.rs
src/backup/: mod.rs  skip.rs  work.rs
src/camera/: backup.rs  mod.rs  skip.rs  work.rs
src/config/: cli.rs  env.rs  mod.rs  yaml.rs
src/db/: file.rs  filemap.rs  header.rs  mod.rs  tree.rs
src/geo/: db.rs  mod.rs
src/telegram/: mod.rs  skip.rs
tests/: create-azure-zips  e2e-camera  move-pcloud  remove-local-pictures  set-box-buffer  set-box-camera-buffer  set-camera-buffers  termux  tests.rs  upload-buffer-box  upload-buffer-gphotos  upload-telegram-buffer
