[package]
name = "storm"
version = "0.7.0"
authors = ["Denis Isidoro <denis_isidoro@live.com>"]
edition = "2021"
description = "Cloud utilities"
homepage = "https://github.com/denisidoro/storm"
documentation = "https://github.com/denisidoro/storm"
repository = "https://github.com/denisidoro/storm"
keywords = ["cli", "cloud"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[dependencies]
regex = { version = "1.5.4", default-features = false, features = ["std", "unicode-perl"] }
clap = { version = "3.2.8", features = ["derive"] }
directories-next = "2.0.0"
anyhow = "1.0.58"
thiserror = "1.0.31"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = "0.4"
walkdir = "2"
which = "4.2.5"
workerpool = "1.2.0"
once_cell = "1.12.0"
md5 = "0.7.0"
tempfile = "3.3.0"
termcolor = "1.1.3"
deepsize = "0.2.0"

[dev-dependencies]
more-asserts = "0.3.1"

[lib]
name = "storm"
path = "src/lib.rs"

[[bin]]
name = "storm"
path = "src/bin/main.rs"
bench = false
